--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "aos": "^2.3.4",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.11.3",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.9.0",
@@ -43,7 +45,9 @@
       "last 1 safari version"
     ]
   },
-  "react-dotenv":{
-    "whitelist":["API_URL"]
+  "react-dotenv": {
+    "whitelist": [
+      "API_URL"
+    ]
   }
 }
